--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "63fe2084",
    "metadata": {},
    "outputs": [
@@ -52415,14 +52415,14 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "\n",
-    "car_data = pd.read_csv('vehicles_us.csv') # lendo os dados\n",
+    "car_data = pd.read_csv('../vehicles_us.csv') # lendo os dados\n",
     "fig = px.histogram(car_data, x=\"odometer\") # criar um histograma\n",
     "fig.show() # exibindo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f7efd1e7",
    "metadata": {},
    "outputs": [
@@ -156356,7 +156356,7 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "\n",
-    "car_data = pd.read_csv('vehicles_us.csv') # lendo os dados\n",
+    "car_data = pd.read_csv('../vehicles_us.csv') # lendo os dados\n",
     "fig = px.scatter(car_data, x=\"odometer\", y=\"price\") # criar um gráfico de dispersão\n",
     "fig.show() # exibindo"
    ]
